# blipper

./: .gitignore  Cargo.toml
blipper/: Cargo.toml
blipper-fw/: Cargo.toml
blipper-fw/src/: blip.rs  main.rs  recv.rs
blipper-shared/: Cargo.toml
blipper-shared/src/: decoder.rs  lib.rs  link.rs  protocol.rs
blipper-support/: Cargo.toml
blipper-support/src/: decoder.rs  link.rs
blipper/src/: main.rs
cli/: Cargo.toml
cli/src/: blippervcd.rs  capture.rs  decode.rs  irsend.rs  main.rs  playback.rs  vcdutils.rs
common/: Cargo.toml
common/src/: lib.rs
firmware/: Cargo.toml
firmware/bluepill/: Cargo.toml
firmware/bluepill/src/: blip.rs  main.rs
firmware/board-discovery/: Cargo.toml  README.md  memory.x
firmware/board-discovery/.cargo/: config
firmware/board-discovery/src/: main.rs
firmware/libblip/: Cargo.toml
firmware/libblip/src/: capturer.rs  lib.rs
firmware/nucleo/: Cargo.toml
firmware/rp-pico/: Cargo.toml
firmware/src/: blip.rs  busb.rs  main.rs
gui/: .gitignore  Cargo.toml
gui/src/: blipper.glade  main.rs  remotes.rs
host/: Cargo.toml  README.md
host/src/: blippervcd.rs  capture.rs  decode.rs  irsend.rs  lib.rs  link.rs  main.rs  serialpostcard.rs  vcdwriter.rs
libblipper/: Cargo.toml
libblipper/src/: decoder.rs  lib.rs  link.rs
libblipperhost/: Cargo.toml
libblipperhost/src/: decoder.rs  link.rs
protocol/: Cargo.toml
protocol/src/: lib.rs
src/: capture.rs  irsend.rs  main.rs  playback.rs  vcdutils.rs
utils/: Cargo.toml
utils/src/: decoder.rs  lib.rs  link.rs
