[package]
name = "blipper"
version = "0.4.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Blipper infrared utility"

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
serialport = "3.3.0"
vcd = "0.6.1"
structopt = "0.3"
heapless = "0.5.1"
postcard = "0.5.1"
infrared = { version = "0.8" }
blipper-shared = { path = "blipper-shared", version = "0.1", features = ["utils"] }

[workspace]
members = [ "blipper-shared", ]

[patch.crates-io]
infrared = { git = "https://github.com/jkristell/infrared", branch="wip-r0.9" }

