[package]
name = "blipper"
version = "0.4.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Blipper infrared utility"

[dependencies]
log = "0.4.8"
env_logger = "0.9.0"
vcd = "0.6.1"
clap = { version = "3.1.18", features = ["derive"] }
infrared = { version = "0.14.1" }
blipper-shared = { path = "blipper-shared", version = "0.1", features = ["utils"] }
anyhow = "1.0.57"

[workspace]
members = ["blipper-shared"]

[patch.crates-io]
infrared = { path = "../infrared" }

