[package]
name = "blipper-shared"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Blipper shared"

[features]
default = []
utils = ["serialport", "heapless", "postcard", "infrared"]

[dependencies]
serialport = { version = "3.3.0", optional = true }
heapless = { version = "0.5.5", optional = true }
postcard = { version = "0.5.1", optional = true }
infrared = { version = "0.10", features = ["remotes", "std"], optional = true }
log = "0.4.11"
serde = { version = "1", default-features = false, features = ["derive"] }

