[package]
name = "blipper-cli"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
log = "0.4.8"
env_logger = "0.7.0"
serialport = "3.3.0"
vcd = "0.5.0"
structopt = "0.3"
heapless = "0.5.1"
postcard = "0.5.1"
#infrared = { version = "0.6", features = ["protocol-debug", "embedded-hal"]}
infrared = { path = "../../infrared", default-features = false, features = ["nec"]}
blipper-protocol = { path = "../protocol" }
blipper-utils = { path = "../utils" }
