[package]
name = "blipper-firmware"
version = "0.0.1"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
description = "Remote control application"
repository = "https://github.com/jkristell/blipper"
keywords = ["remote", "control"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = {version = "0.6.11", features = ["device"]}
panic-semihosting = "0.5.3"
usb-device = "0.2.3"
usbd-serial = "0.1.0"
cortex-m-rtfm = "0.5"
cortex-m-semihosting = "0.3.5"
embedded-hal = "0.2.3"
heapless = "0.5.1"
postcard = "0.4.3"
common = { path = "../common" }

[dependencies.stm32f1xx-hal]
version = "0.5"
features = ["rt", "stm32-usbd", "stm32f103", "medium"]

[dependencies.infrared]
version ="0.6.0"
# path = "../../infrared"
features = ["embedded-hal"]


[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
lto = true
incremental = false
opt-level = "z"
debug = true
