[package]
name = "blipper-gtk"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
log = "0.4"
gio = "0.8"
gtk = { version = "0.8.0", features = ["v3_22"] }
gdk-pixbuf = "0.8.0"
glib = "0.9"
#infrared = { version = "0.5", features = ["remotes", "std"]}
infrared = { path = "../../infrared", features = ["remotes", "std"]}
libblipper = { path = "../libblipper" }
common = { path = "../common" }