[package]
name = "blipper-gtk"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.7.0"
gio = "0.9"
gtk = { version = "0.9.0", features = ["v3_22"] }
gdk-pixbuf = "0.9.0"
glib = "0.10"
infrared = { path = "../../infrared", features = ["remotes", "std"]}
blipper-utils = { path = "../utils" }
blipper-protocol = { path = "../protocol" }
