[package]
name = "blipper-host"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
serialport = "3.3.0"
vcd = "0.4.0"
structopt = "0.3"
heapless = "0.5.1"
postcard = "0.4.1"
common = { path = "../common" }
infrared = { path = "../../infrared", features = ["protocol-dev"]}
log = "0.4.8"
femme = "1.2.0"