[package]
name = "blipper-utils"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
serialport = "3.3.0"
heapless = "0.5.5"
postcard = "0.5.1"
log = "0.4.11"
blipper-protocol = { path = "../protocol" }
infrared = { version = "0.7", features = ["remotes", "std"]}
