[package]
name = "blipper-firmware"
version = "0.0.1"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"
description = "Remote control application"
repository = "https://github.com/jkristell/blipper"
keywords = ["remote", "control"]
categories = ["no-std", "embedded"]
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = {version = "0.6.13", features = ["device"]}
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.1", features = ["cortex-m"] }

usb-device = "0.2.5"
usbd-serial = "0.1.0"
cortex-m-rtic = { version = "0.5" }
embedded-hal = "0.2.4"
heapless = "0.5.5"
postcard = "0.5.1"
blipper-protocol = { path = "../../protocol" }
libblip = { path = "../libblip" }

[dependencies.stm32f1xx-hal]
version = "0.6"
features = ["rt", "stm32-usbd", "stm32f103", "medium"]

[dependencies.infrared]
version ="0.7.0"

[profile.dev]
opt-level = 1
lto = true
incremental = false

[profile.release]
codegen-units = 1
lto = true
incremental = false
opt-level = "z"
debug = true

