[package]
authors = ["Johan Kristell <johan@jott.se>"]
name = "blip-f4"
version = "0.0.1"
edition = "2018"

[dependencies]
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
cortex-m-rtic = "0.5"
stm32f4xx-hal = { version = "0.8.0", features = ["stm32f407", "usb_fs", "rt"] }
usb-device = "0.2.7"
usbd-serial = "0.1.1"
embedded-hal = "0.2.4"
heapless = "0.5.6"
postcard = "0.5.1"
blipper-protocol = { path = "../../protocol" }
libblip = { path = "../libblip" }

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[patch.crates-io]
infrared = { path = "../../../infrared" }

