[package]
name = "libblip"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
blipper-protocol = { path = "../../protocol" }
infrared = "0.7.0"
rtt-target = { version = "0.2.2", features = ["cortex-m"] }
postcard = "0.5.1"

[patch.crates-io]
infrared = { path = "../../../infrared" }
