[package]
name = "libblip"
version = "0.1.0"
authors = ["Johan Kristell <johan@jott.se>"]
edition = "2018"

[dependencies]
embedded-hal = "0.2.4"
blipper-shared = { path = "../../blipper-shared" }
#infrared = "0.14.1"
infrared = { path = "../../../infrared" }
postcard = "0.7.3"

[patch.crates-io]
infrared = { path = "../../../infrared" }
