[package]
authors = ["Johan Kristell <johan@jott.se>"]
name = "blip-f4"
version = "0.0.1"
edition = "2018"

[dependencies]
rtt-target = { version = "0.2.0", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
cortex-m-rtic = "0.5"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
