[package]
name = "rp-pico-examples"
version = "0.1.0"
publish = false
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.7", features = ["unproven"]}

defmt = "0.3"
defmt-rtt = "0.3.1"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp-pico = "0.3.0"


usb-device= "0.2.8"
usbd-serial = "0.1.1"
usbd-hid = "0.5.1"

cortex-m-rtic = "1"
rtic-monotonic = "1"
rp2040-monotonic = "1.1.0"

infrared = { path = "../../../infrared", features = ["defmt"] }
libblip = { path = "../libblip" }
heapless = "0.7.13"
postcard = { version = "0.7.3", features = ["use-defmt"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

